[project]
name = "docs-talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.11.1",
    "crawl4ai>=0.8.9",
    "faster-whisper>=1.2.1",
    "langchain>=1.3.4",
    "langchain-ollama>=1.1.0",
    "yt-dlp>=2026.6.9",
]
